<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.illucit</groupId>
        <artifactId>illucit-parent</artifactId>
        <version>5</version>
    </parent>

    <artifactId>instatrie</artifactId>
    <version>2.1.0</version>
    <packaging>jar</packaging>

    <name>InstaTrie</name>
    <description>Trie Data Structure for high-performance String search and filtering</description>
    <url>https://www.illucit.com</url>

    <organization>
        <name>illucIT Software GmbH</name>
        <url>https://www.illucit.com</url>
    </organization>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:git://${scm.connection}</connection>
        <developerConnection>scm:git:ssh://${scm.connection}</developerConnection>
        <url>${scm.url}</url>
    </scm>

    <developers>
        <developer>
            <id>metaxmx</id>
            <name>Christian Simon</name>
            <email>simon@illucit.com</email>
            <url>https://github.com/metaxmx</url>
            <organization>illucIT Software GmbH</organization>
            <organizationUrl>https://www.illucit.com</organizationUrl>
        </developer>
    </developers>

    <properties>
        <!-- Release Info -->
        <scm.connection>github.com:illucIT/InstaTrie.git</scm.connection>
        <scm.url>https://github.com/illucIT/InstaTrie/tree/master</scm.url>

        <!-- Target Java Compatibility -->
        <maven.compiler.release>21</maven.compiler.release>

        <!-- Define the version of lucene utils -->
        <version.luceneutils>1.2.0</version.luceneutils>

        <!-- Junit -->
        <junit5.jupiter.version>5.13.1</junit5.jupiter.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit5.jupiter.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>com.illucit</groupId>
            <artifactId>lucene-utils</artifactId>
            <version>${version.luceneutils}</version>
        </dependency>

        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-launcher</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>${maven.compiler.release}</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>
